[project]
name = "ComfyUI-OmniGen"
version = "1.0.0"
description = "ComfyUI custom node implementation of OmniGen"
authors = [
    {name = "AILab", email = "ailab@mail.com"}
]
dependencies = [
    "datasets==2.20.0",
    "accelerate==0.26.1",
    "numpy==1.26.3",
    "pillow==10.2.0",
    "peft==0.13.2",
    "timm==0.9.16",
    "huggingface_hub",
    "torch",
    "requests",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT License"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
PublisherId = "AILab"
packages = ["ComfyUI-OmniGen"]
Icon = ""

[project.urls]
Homepage = "https://github.com/1038lab/ComfyUI-OmniGen"
Repository = "https://github.com/1038lab/ComfyUI-OmniGen.git" 