[project]
name = "ComfyUI-OmniGen"
version = "1.2.0"
description = "OmniGen node for AI image generation"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "huggingface_hub",
    "requests>=2.31.0",
    "transformers>=4.30.0",
    "accelerate>=0.26.0",
    "einops>=0.6.0",
    "safetensors>=0.3.0",
]

[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-OmniGen"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "AILab"
DisplayName = "ComfyUI-OmniGen"
Icon = ""
